--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^37.3.1"
+    "electron": "^37.3.1",
+    "electron-packager": "^17.1.2"
+  },
+  "dependencies": {
+    "exceljs": "^4.4.0"
   }
 }
